# magni

./: .README.md.swp  .gitignore  .gitmodules  Dockerfile  README.md  depend.repos  install_cmake.bash  magni.repos  pose_est_magni_approach.sh  pose_est_nursing_desk.sh  start_device.bash  start_free_fleet.bash  tags
.github/workflows/: build.yml  build_w_docker.yml
DemoBash/: .rmf_schedule_node.yaml  act.bash  alias.txt  bashrc_backup.txt  chart_tutorial.bash  dpm_demo.bash  i2r.bash  latest.bash  romio.bash  rsbpearl.bash  skh_demo.bash  start_chart_chrony.bash  start_device.bash  start_free_fleet.bash  start_missy_chart_ward_demo.bash  sutd.bash  sutd_romio.bash  sutd_split_lidars.bash  tmux_base.bash  tmux_cio_demo.bash  tmux_cio_demo_charging.bash  tmux_dp3_demo.bash  tmux_ntu_demo.bash  tmux_run.bash  tmux_run_Ward45Bot.bash  troubleshoot.bash
DemoBash/script/: send_nav_goal.py
chart_magni_nuc/: .gitignore  README.md
chart_magni_nuc/installation/: apt-dependencies  bootstrapper.bash  required-files  ros1-source-dependencies  setup.bash  vnc-gnome-install
chart_magni_nuc/magni_45_mapping/: CMakeLists.txt  package.xml
chart_magni_nuc/magni_45_mapping/cartographer_configs/: magni_write_ros_map.lua
chart_magni_rpi4/installation/: apt-dependencies  bootstrapper.bash  install-rmf-sources.bash  install_cmake.bash  required-files  restore_last_pose.bash  ros1-source-dependencies  save_last_pose.bash  setup.bash  start_device.bash  start_free_fleet.bash
chart_magni_rpi4/magni_45_uwb/: CMakeLists.txt  package.xml
chart_magni_stack/chart_magni_rpi4/: magni.repos
i2r_magni/: align_behaviour.yaml  asoronav_task_handler_specific.yaml  base.launch  costmap_common_params.yaml  global_costmap_params.yaml  i2r_utils.launch  joystick.launch  laser.launch  local_costmap_params.yaml  map_server.launch  merge_lidar_scan.launch  motor_filter.launch  motor_filter_specific.yaml  original_costmap_common_params.yaml  pursuit.yaml  pursuit_task_handler_specific.yaml  safety_3d.launch  sensorConfig.yaml  sensorConfigBelow.yaml  sensor_hub.launch  sensor_pointcloud.launch  start_specific_sensors_and_functions.launch  status.launch  tele_joy.yaml  tf.launch  tmux_run.bash  usbcam.launch
magni/: CMakeLists.txt  package.xml
magni/chrony_config/: chron_client.conf  chron_server.conf
magni/config/: NUC_ROSENV.txt  chart.rviz  dp3.rviz  missybot.rviz  missybotChart.rviz  my_laser_config.yaml  my_rp_laser_config.yaml  right_rplidar_laser.yaml  romio.rviz
magni/launch/: TallDeliveryMagni.launch  chart_tutorial.launch  dual_rplidar.launch  free_fleet.launch  latest.launch  magni_45_3_lidar_new.launch  (+15 more)
magni/magni_move_base/: CMakeLists.txt  package.xml
magni/magni_move_base/param/romio/: costmap_common_params.yaml  dwa_local_planner_params.yaml
magni_45/ros1/src/magni_45/: package.xml
magni_45/ros1/src/magni_45/launch/: magni_45_single_lidar.launch
magni_rplidar_nav/: package.xml
magni_rplidar_nav/launch/: amcl.launch  magni.launch  magni_rplidar_nav.launch  teleop_with_amcl.launch
magni_rplidar_nav/magni_rplidar_nav/: CMakeLists.txt
magni_rplidar_nav/param/: amcl.yaml  base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  magni.yaml  move_base_params.yaml
magni_rplidar_nav/udev/: magni.rules
param/: base_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ros1/src/magni_45_rplidar/: CMakeLists.txt  package.xml
ros1/src/magni_45_rplidar/launch/: back_rplidar.launch  dual_rplidar.launch  front_rplidar.launch  magni_45.launch  magni_laser_merger.launch  single_rplidar.launch
ros1/src/magni_45_rplidar/maps/: map_server_params.yaml
ros1/src/magni_45_rplidar/param/: amcl.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros1/src/magni_45_rplidar/single_lidar_param/: dwa_local_planner_params.yaml
rsbpearl_ws/: README_CHART.md
src/: magni.repos
tools/: get_tf.py  init.sh  patch_rplidar_driver.sh  setup.bash
(+185 files in other folders)
