<?xml version="1.0"?>
<package>
  <name>magni_45_mapping</name>
  <version>0.0.0</version>
  <description>Mapping helper scripts</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>
  <author email="morgan@openrobotics.org">Morgan Quigley</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>rviz</run_depend>
</package>
