<?xml version="1.0"?>
<package format="2">
  <name>magni_45_uwb</name>
  <version>0.0.0</version>
  <description>Package to use UWB information for localization in magni_45</description>

  <maintainer email="cnboonhan94@gmail.com">Charayaphan Nakorn Boon Han</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
