<?xml version="1.0"?>
<package format="2">
  <name>magni_move_base</name>
  <version>0.0.0</version>
  <description>A Magni navstack configuration</description>
  <maintainer email="jun_hao_chng@cgh.com.sg">Boon Han</maintainer>
  <license>Apache 2.0</license>
  <author email="jun_hao_chng@cgh.com.sg">Charayaphan Nakorn Boon Han</author>

	<buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
